# Raytracer-Renderer-CGI

./: .gitignore  CMakeLists.txt  README.md
TolgasCodeRefactoredOOP/: main.cpp  raytracer.cpp  raytracer.hpp  raytracerTolga.c  scene.txt  scene2.txt
code_template/: Makefile  Sphere.cpp  Sphere.h  camera_bundle.cpp  camera_bundle.h  mesh.cpp  mesh.h  object.cpp  object.h  output.ppm  ray.cpp  ray.h  ray_test.cpp  raytracer  raytracer.cpp  shape.cpp  shape.h  sphere.cpp  sphere.h  tester  tester.cpp  triangle.cpp  triangle.h  utility.h  vec3.h
